[package]
name = "ckb-signal-profiler"
version = "0.1.0"
edition = "2018"
description = "Linux signal based profiler for ckb-vm, note this is profiling ckb-vm itself, not the programs running in ckb-vm"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
clap = "2.33.0"
ckb-vm = { git="https://github.com/nervosnetwork/ckb-vm.git", rev="5122610", features = ["asm"] }
log = "0.4.16"
env_logger = "0.9.0"
ckb-vm-signal-profiler = { path = ".." }

